--- a/custom_components/services.yaml
+++ b/custom_components/services.yaml
@@ -1,3 +1,3 @@
 reload:
   name: Reload
-  description: Reload all generic_thermostat entities.
+  description: Reload all generic_thermostat2 entities.
